//
// unit
//
Table unit {
  id int [primary key, increment]
  age int
  workclass_id int [ref: > workclass.id]
  fnlwgt int
  education_id int [ref: > education.id]
  marital_status_id int [ref: > marital_status.id]
  occupation_id int [ref: > occupation.id]
  family_relationship_id int [ref: > family_relationship.id]
  race_id int [ref: > race.id]
  gender_id int [ref: > gender.id]
  capital_gain int
  capital_loss int
  hours_per_week int
  native_country_id int [ref: > country.id]
  income_id int [ref: > income.id]
}


//
// workclass
//
Table workclass {
  id int [primary key, increment]
  workclass varchar [not null, unique]
}


//
// education
//
Table education {
  id int [primary key, increment]
  education varchar [not null, unique]
  educational_num int [not null, unique]

  Indexes {
    (education, educational_num) [unique]
  }
}


//
// marital_status
//
Table marital_status {
  id int [primary key, increment]
  marital_status varchar [not null, unique]
}


//
// occupation
//
Table occupation {
  id int [primary key, increment]
  occupation varchar [not null, unique]
}


//
// family_relationship
//
Table family_relationship {
  id int [primary key, increment]
  family_relationship varchar [not null, unique]
}


//
// race
//
Table race {
  id int [primary key, increment]
  race varchar [not null, unique]
}


//
// gender
//
Table gender {
  id int [primary key, increment]
  gender varchar [not null, unique]
}


//
// country
//
Table country {
  id int [primary key, increment]
  country varchar [not null, unique]
}


//
// income
//
Table income {
  id int [primary key, increment]
  income varchar [not null, unique]
}